came home fixing search on iOS

--- a/app/static_src/less/partials/header.less
+++ b/app/static_src/less/partials/header.less
@@ -291,12 +291,10 @@
 }
 
 .header-right-navigations {
-  display: inline-block;
   vertical-align: top;
   margin: 0 0 0 auto;
   font-size: 0;
   height: 45px;
-  float: right;
 }
 
 .header-right-navigations-mb-app {
@@ -572,4 +570,12 @@
   .container {
     margin-top: 0;
   }
+}
+
+#rightHeaderNavigation {
+  z-index: 3;
+  position: fixed;
+  right: 0;
+  top: 0;
+  margin-right: 8px;
 }
