--- a/app/static_src/less/partials/nav.less
+++ b/app/static_src/less/partials/nav.less
@@ -380,7 +380,6 @@
         color: @basicGray;
     }
     .navbar-nav{
-        width: unset !important;
         > li{
             > a{
                 color: @darkBlack;
@@ -783,4 +782,11 @@ span.deleteicon input {
 
 .collapse.in {
   overflow: hidden;
+}
+
+#navbar {
+    margin:0; 
+    padding:0; 
+    overflow:hidden; 
+    width:100%;
 }
